--- a/lesson_3.html
+++ b/lesson_3.html
@@ -7,12 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./lesson_3.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
 </head>
 
 <body>
     <header class="header">
         <div class="gradient"></div>
-        <h1 class="header_text">Arctica</h1>
+        <h1 class="header_text">Antarctica</h1>
     </header>
     <nav class="page-nav">
         <a href="#" class="page-nav__link page-nav__link_active">Summary</a>
@@ -22,8 +23,9 @@
         <a href="#" class="page-nav__link">Residential Guide</a>
         <a href="#" class="page-nav__link">Photos</a>
     </nav>
-    <div class="content">
-        <section class="benefits">
+
+    <section class="benefits">
+        <div class="content">
             <h2 class="benefits__header">Why you’ll love Antarctica</h2>
             <p class="benefits__description">Preserved for peace and science, this ice-crowned continent rewards the
                 traveler with inspiration, adventure and perspective. There’s nothing quite like seeing ice shimmering
@@ -40,28 +42,30 @@
                     </div>
                 </div>
                 <div class="icon">
-                    <img src="./img/icon.png" alt="Icon">
+                    <img src="./img/icon2.png" alt="Icon">
                     <div class="icon_description">
-                        <h4>252</h4>
-                        <span>Trips</span>
+                        <h4>98</h4>
+                        <span>Veneus</span>
                     </div>
                 </div>
                 <div class="icon">
-                    <img src="./img/icon3.png" alt="Icon">
+                    <img src="./img/icon2.png" alt="Icon">
                     <div class="icon_description">
-                        <h4>252</h4>
-                        <span>Trips</span>
+                        <h4>456</h4>
+                        <span>Tickets Sold</span>
                     </div>
                 </div>
                 <div class="icon">
-                    <img src="./img/icon4.png" alt="Icon">
+                    <img src="./img/icon2.png" alt="Icon">
                     <div class="icon_description">
-                        <h4>252</h4>
-                        <span>Trips</span>
+                        <h4>105</h4>
+                        <span>Reviews</span>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
+    <div class="content">
         <section class="promo">
             <h2 class="benefits__header">What Antarctica is about</h2>
             <p class="benefits__description">Antarctica consists of two main areas. East Antarctica (Greater
@@ -70,38 +74,149 @@
                 if the ice sheet were removed, West Antarctica would actually be a collection of islands. <a
                     href="#">Read more >></a>
             </p>
-            <div class="promo__text">
-                <h4>No trees or bushes at all</h4>
-                <p>Vegetation is limited to about 350 species of mostly lichens, mosses, and algae. There are lush beds
-                    of such vegetation in some parts of the Antarctic Peninsula. Lichens have been discovered growing on
-                    isolated mountains within 475 km (295 mls) of the South Pole.</p>
-                <div class="top__corner"></div>
-                <div class="bottom__corner"></div>
-            </div>
-            <div class="promo__image">
-                <img src="./img/photo_2.jpg" alt="">
+            <div class="wrap_container">
+                <div class="promo__text">
+                    <h4>No trees or bushes at all</h4>
+                    <p>Vegetation is limited to about 350 species of mostly lichens, mosses, and algae. There are lush
+                        beds
+                        of such vegetation in some parts of the Antarctic Peninsula. Lichens have been discovered
+                        growing on
+                        isolated mountains within 475 km (295 mls) of the South Pole.</p>
+                    <div class="top__corner"></div>
+                    <div class="bottom__corner"></div>
+                </div>
+                <div class="promo__image">
+                    <img src="./img/photo_2.jpg" alt="">
+                </div>
             </div>
             <div class="animals">
-                <div class="promo__text2">
+                <div class="promo__text right_side">
                     <h4>No trees or bushes at all</h4>
                     <p>Vegetation is limited to about 350 species of mostly lichens, mosses, and algae. There are lush
                         beds of such vegetation in some parts of the Antarctic Peninsula. Lichens have been discovered
                         growing on isolated mountains within 475 km (295 mls) of the South Pole.</p>
-                    <div class="top__corner2"></div>
-                    <div class="bottom__corner2"></div>
+                    <div class="top__corner"></div>
+                    <div class="bottom__corner"></div>
                 </div>
                 <div class="promo__image">
                     <img src="./img/photo.jpg" alt="">
                 </div>
             </div>
-
-
-
-        </section>
     </div>
+    </section>
+    <section class="block__penguins">
+        <div class="content">
+            <h2 class="benefits__header">King Penguins</h2>
+            <h3 class="subtiite__penguins"> (<span>)</span> Hover for more info</h3>
+            <div class="photo_penguin">
+                <img src="./img/penguin.jpg" alt="Penguin">
+                <div class="animation__wrap">
+                    <div class="pointer">
+                        <div class="line_to_left"></div>
+                        <div class="parts_subsription">Colourful Feathers</div>
+                    </div>
+                </div>
+                <div class="animation__wrap2">
+                    <div class="pointer_middle">
+                        <div class="line_to_right">
+                        </div>
+                        <div class="wing_subscription">Long wing</div>
+                    </div>
+                </div>
+                <div class="animation__wrap third_block">
+                    <div class="pointer">
+                        <div class="line_to_left"></div>
+                        <div class="parts_subsription">Never Freeze</div>
+                    </div>
+                </div>
+            </div>
+            <p class="benefits__description">King penguins are one of the species that people think of when the think of
+                penguins. Along with Adelie penguins, and Emperor penguins they have come to represent the whole group.
+                They are very upright, dignified and handsome birds and when they emerge from the sea pristine and
+                glistening there can be no cleaner or more elegant creature around.</p>
+        </div>
+    </section>
 
-
-
+    <section class="photos__slaider">
+        <div class="content">
+            <h2 class="benefits__header">Antarctica in Photos</h2>
+            <p class="benefits__description">It would be far from a continuous smooth sheet though, as it is
+                continuously moving. Glaciers, huge rivers of ice drain the interior of the continent and form ice
+                shelves at the coasts. Where a glacier is moving, the ice cracks, breaks and is ruptured by the
+                underlying rock and also by different streams meeting that move at different speeds. The ice sheet is
+                therefore very dangerous in places as it is broken up by great crevasse fields with some cracks hundreds
+                of feet deep and frequently covered by weak bridges formed of blown snow.</a>
+            </p>
+            <div class="stripe"></div>
+            <div class="slaider">
+                <div class="previos_slaide_blok">
+                    <div class="blue_circle">
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="slaide_1">
+                    <img src="./img/bear.jpg" alt="Bear">
+                </div>
+                <div class="next_slaide_blok">
+                        <div class="blue_circle">
+                            <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="nav_foooter_wrap">
+            <div class="column_1_5">
+                <h2>T-Agency</h2>
+                <select name="countries" id="">
+                    <option value="">US Dollar</option>
+                </select>
+            </div>
+            <div class="column_1_5">
+                <h3>company</h3>
+                <ul>
+                    <li><a href="#">About TripOp</a></li>
+                    <li><a href="#">Work with Us</a></li>
+                    <li><a href="#">Press Room</a></li>
+                    <li><a href="#">Become a Partner</a></li>
+                </ul>
+            </div>
+            <div class="column_1_5">
+                <h3>discover</h3>
+                <ul>
+                    <li><a href="#">How to Book?</a></li>
+                    <li><a href="#">Methods of Payment</a></li>
+                    <li><a href="#">General Conditions</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Site Map</a></li>
+                </ul>
+            </div>
+            <div class="column_1_5">
+                <h3>connect with us</h3>
+                <ul>
+                    <li><a href="#"><i class="fa fa-commenting-o fa-lg" aria-hidden="true"></i>Contact Us</a></li>
+                    <li><a href="#"><i class="fa fa-facebook-official fa-lg" aria-hidden="true"></i>Facebook</a></li>
+                    <li><a href="#"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i>Instagram</a></li>
+                    <li><a href="#"><i class="fa fa-youtube fa-lg" aria-hidden="true"></i>Youtube</a></li>
+                    <li><a href="#"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i>Newsletter</a></li>
+                </ul>
+            </div>
+            <div class="column_1_5">
+                <h3>Blog</h3>
+                <ul>
+                    <li><a href="#">Choosing A Static Caravan</a></li>
+                    <li><a href="#">Cost Cutting Ideas For Your Wedding</a></li>
+                    <li><a href="#">Do A Sporting Stag Do In Birmingham</a></li>
+                    <li><a href="#">Mother Earth Hosts Our Travels</a></li>
+                    <li><a href="#">Trip To Iqaluit In Nunavut A Canadian Arctic City</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="rights">
+                <p>© 2016 All rights reserved. </p>
+            </div>
+    </footer>
 </body>
 
 </html>
